package bootcamp;

public interface Carnivoro {
    void comerCarne();
}
