package bootcamp;

public interface Herviboro {
    void comerHierba();
}
